# auth_service

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  ruff.toml
docker_compose/: auth_dev.yaml  celery.yaml  kafka.yaml  migrations.yaml  pgadmin.yaml  postgres.yaml  postgres_test.yaml  redis.yaml
observation/: litestar_dashboard.json  loki_config.yaml  observation.yaml  prometheus.yaml
observation/alloy_conf/: docker.alloy  local.alloy  loki_docker.alloy  prometheus.alloy
observation/grafana_conf/: loki.yaml  prometheus.yaml
src/application/: cqrs_di_setup.py
src/application/base/: exception.py
src/application/cqrs/: cqrs_di_setup.py  helpers.py
src/application/dependency_injector/: di.py
src/application/dto/: __init__.py  permission.py  role.py  session.py  token.py  user.py
src/application/event_handlers/: event_dispatcher.py  event_publisher.py
src/application/event_sourcing/: event_consumer.py  event_publisher.py
src/application/exceptions/: __init__.py  jwt.py  mediator.py  oauth.py  rbac.py  token.py  user.py
src/application/mediator/: command_mediator.py  query_mediator.py
src/application/security/: jwt_di_setup.py  jwt_encoder.py  jwt_manager.py  jwt_payload_generator.py  security_user.py
src/application/session/: device_identifier.py  session_di_setup.py
src/application/user/: user_di_setup.py
src/domain/: __init__.py
src/settings/: __init__.py  config.py
tests/: conftest.py  fixtures.py  parametrize_data.py
tests/e2e/: test_user_handlers.py
tests/mock/: request.py  response.py
(+215 files in other folders)
