[project]
name = "auth-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0",
    "alembic>=1.15.1",
    "bcrypt>=4.3.0",
    "black>=25.1.0",
    "dishka>=1.4.2",
    "litestar[standard]>=2.15.1",
    "orjson>=3.10.15",
    "pydantic[email]>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.39",
    "uuid6>=2024.7.10",
    "user-agents>=2.2.0",
    "python-jose[cryptography]>=3.4.0",
    "asyncpg>=0.30.0",
    "structlog>=25.2.0",
    "kafka-python>=2.1.5",
    "celery>=5.5.1",
    "aiojobs>=1.4.0",
    "flower>=2.0.1",
    "prometheus-client>=0.21.1",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.26.0",
]
